# libHappy

./: .gitmodules  .lgtm.yml  CMakeLists.txt  README.md  any_addr.cpp  any_addr.h  libhappy.pc.in  md5.cpp  md5.h  net.cpp  net.h  sip.cpp  sip.h  testhappy-alsa.cpp  testhappy-call.cpp  testhappy-mpd.cpp  testhappy-pa.cpp  testhappy.cpp  utils.cpp  utils.h
.github/workflows/: codeql.yml
